# simdb

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  patch  run_iwyu.py
.github/: CODEOWNERS
.github/actions/: check_headers.sh  clang-format-check.sh  cmake.sh  regress.sh
.github/workflows/: simdb-regress.yml
cmake/: SimDBConfig.cmake.in  SimDBMacros.cmake
docs/: doxygen-burndown.md
docs/book/: Makefile  add-xrefs.py  book.adoc  book.html
docs/book/parts/: part1-why-simdb.adoc  part2-getting-started.adoc  part3-sqlite-interface.adoc  part4-concurrent-pipelines.adoc  part5-app-framework.adoc  part6-advanced-pipelines.adoc  part7-argos-case-study.adoc  part8-patterns-cookbook.adoc  part9-reference.adoc
examples/: CMakeLists.txt  README.md  SimplePipeline.hpp
examples/AppFactory/: CMakeLists.txt  main.cpp
examples/ArgosCollector/: CMakeLists.txt  TestEnabledLogic.golden.out  TestScalarCollection.golden.out  dump.py  main.cpp  validate.py
examples/AsyncDatabaseAccess/: CMakeLists.txt  main.cpp
examples/CancelledTask/: CMakeLists.txt  main.cpp
examples/CompressionPool/: CMakeLists.txt  main.cpp
examples/ConcurrentApps/: CMakeLists.txt  main.cpp
examples/Cursor/: CMakeLists.txt  main.cpp
examples/DatabaseWatchdog/: CMakeLists.txt  main.cpp
examples/MIMO/: CMakeLists.txt  main.cpp
examples/MultiLevelCache/: CMakeLists.txt
examples/MultiPortStages/: CMakeLists.txt  main.cpp
examples/PeekPipeline/: CMakeLists.txt
examples/PipelineCache/: CMakeLists.txt  main.cpp
examples/PipelineSnooper/: CMakeLists.txt  main.cpp
examples/PipelineSnooper/PerItem/: CMakeLists.txt  main.cpp
examples/PipelineSnooper/PerQueue/: CMakeLists.txt  main.cpp
examples/PipelineSnoopers/: CMakeLists.txt  main.cpp
examples/SimplePipeline/: CMakeLists.txt  main.cpp
examples/StagePool/: CMakeLists.txt
include/simdb/: Assert.hpp  Exceptions.hpp
include/simdb/apps/: App.hpp  AppManager.hpp  AppPipeline.hpp  AppRegistration.hpp  ArgosCollection.hpp  DatabaseQueue.hpp  PipelineApp.hpp  UnifiedSerializer.hpp  UniformSerializer.hpp
include/simdb/apps.old/: App.hpp  AppManager.hpp  AppRegistration.hpp  UnifiedSerializer.hpp
include/simdb/pipeline/: AppPipeline.hpp  AsyncDatabaseAccessor.hpp  AsyncDatabaseTask.hpp  AsyncPipeline.hpp  CompressionThread.hpp  DatabaseAccessor.hpp  DatabaseEntry.hpp  DatabaseQueue.hpp  DatabaseThread.hpp  DormantThread.hpp  Flusher.hpp  Pipeline.hpp  PipelineChain.hpp  PipelineConfig.hpp  PipelineEntry.hpp  PipelineManager.hpp  PipelineQueue.hpp  PipelineRunnable.hpp  PipelineSnooper.hpp  PipelineStage.hpp  PipelineTask.hpp  PipelineTaskGroup.hpp  PipelineThread.hpp  PollingThread.hpp  Queue.hpp  QueueRepo.hpp  README.md  Runnable.hpp  Stage.hpp  Task.hpp  TaskGroup.hpp  Thread.hpp  ThreadMerger.hpp  ThreadedSink.hpp
include/simdb/pipeline.old/: CompressionThread.hpp
include/simdb/schema/: Blob.hpp  SchemaDef.hpp
include/simdb/serialize/: CollectionBuffer.hpp  CollectionPoints.hpp  CompressionThread.hpp  DatabaseThread.hpp  Serialize.hpp  ThreadedSink.hpp
include/simdb/sqlite/: Connection.hpp  Constraints.hpp  DatabaseManager.hpp  Dump.hpp  Iterator.hpp  PreparedINSERT.hpp  Query.hpp  SQLiteConnection.hpp  SQLiteQuery.hpp  SQLiteTable.hpp  SQLiteTransaction.hpp  Table.hpp  Transaction.hpp  ValueContainer.hpp
include/simdb/utils/: CircularBuffer.hpp  Compress.hpp  ConcurrentQueue.hpp  ConditionalLock.hpp  DeferredLock.hpp  Demangle.hpp  FloatCompare.hpp  MTLogger.hpp  Tree.hpp  (+16 more)
python/argos/: argos.py
scripts/: check-headers.py  dump.py  dump_argos_dtype_tables.py
src/: AppManager.cpp
test/: CMakeLists.txt  Colors.hpp  RandUtils.hpp  SimDBTester.hpp
test/ArgosCollection/: CMakeLists.txt  main.cpp
test/CollectionMgr/: CMakeLists.txt  main.cpp
test/Pipeline/: CMakeLists.txt  main.cpp
test/PipelineApp/: CMakeLists.txt  main.cpp
test/PipelineBuffer/: CMakeLists.txt  main.cpp
test/ProfilerApp/: CMakeLists.txt  main.cpp
test/SQLite/: CMakeLists.txt  main.cpp
test/SQLiteAdvanced/: CMakeLists.txt  main.cpp
test/SQLiteBasic/: CMakeLists.txt  main.cpp
test/TBB/: main.cpp
test/UniformSerializer/: CMakeLists.txt  main.cpp
test/apps/: CMakeLists.txt
test/apps.old/: CMakeLists.txt
test/apps.old/DummyApp/: CMakeLists.txt
test/apps.old/UnifiedSerializer/: create_stats_report.py  test.csv
test/apps/AppRegistration/: CMakeLists.txt  main.cpp
test/apps/ArgosCollection/: CMakeLists.txt
test/apps/DummyApp/: main.cpp
test/apps/SimpleApp/: CMakeLists.txt  main.cpp
test/apps/UnifiedSerializer/: CMakeLists.txt  main.cpp
test/argos/: main.cpp
test/argos-basic/: CMakeLists.txt
test/argos-integ/: BlobReplayer.hpp  CMakeLists.txt  compare.py  main.cpp
test/pipeline/: CMakeLists.txt
test/pipeline/DatabaseTask/: CMakeLists.txt  main.cpp
test/pipeline/DotProduct/: main.cpp
test/pipeline/Elements/: main.cpp
test/pipeline/MultiInstanceApps/: CMakeLists.txt  main.cpp
test/pipeline/PipelineElements/: CMakeLists.txt  main.cpp
test/pipeline/PipelineFlush/: CMakeLists.txt  main.cpp
test/pipeline/SharedThreads/: CMakeLists.txt  main.cpp
test/pipeline/TBB/: CMakeLists.txt  main.cpp
test/pipeline/dot_product/: CMakeLists.txt  main.cpp
test/pipeline/elements/: CMakeLists.txt  CircularBuffer.hpp  main.cpp
test/pipeline/hub/: CMakeLists.txt  main.cpp
test/pipeline/pipeline_cache/: CMakeLists.txt  main.cpp
test/pipeline/shared_threads/: CMakeLists.txt  main.cpp
test/profiler/: CMakeLists.txt  ProfilerSerializer.cpp  ROBCacheData.hpp  main.cpp
test/sqlite/: CMakeLists.txt  Delete.cpp  Insert.cpp  Query.cpp  TestData.hpp  TestSchema.hpp
test/sqlite/Delete/: CMakeLists.txt  Delete.cpp  main.cpp
test/sqlite/Insert/: CMakeLists.txt  main.cpp
test/sqlite/Query/: CMakeLists.txt  Query.cpp  main.cpp
test/sqlite/Schema/: CMakeLists.txt  Schema.cpp  main.cpp
test/sqlite/TODO_DeleteMe/: main.cpp
test/sqlite/UInt64/: CMakeLists.txt  UInt64.cpp  main.cpp
test/utils/: CMakeLists.txt
test/utils/timestamps/: CMakeLists.txt  main.cpp
test/utils/tree/: CMakeLists.txt  main.cpp
(+77 files in other folders)
