project(simdb_examples)

# See examples/README.md for details about what SimDB pipeline feature(s)
# are demonstrated in each of these examples.

add_subdirectory(SimplePipeline)
add_subdirectory(MultiPortStages)
add_subdirectory(ConcurrentApps)
add_subdirectory(DatabaseWatchdog)
add_subdirectory(AppFactory)
