find_package(Boost COMPONENTS serialization CONFIG)
if(Boost_FOUND AND Boost_SERIALIZATION_FOUND)
    simdb_test(PerQueuePipelineSnooper main.cpp)
    target_link_libraries(PerQueuePipelineSnooper PRIVATE Boost::serialization)
else()
    message(STATUS "Boost serialization library not found - cannot run PerQueuePipelineSnooper test.")
endif()
